upgrades, 1.0.6.Final